--- a/src/components/cultivations/CultivationTeamTable/index.module.scss
+++ b/src/components/cultivations/CultivationTeamTable/index.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  flex: 1;
 }
 
 .table {
@@ -20,4 +21,11 @@
 .link {
   text-decoration: none;
   color: white;
+}
+
+.loader {
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+  display: flex !important;
 }
