feat: implemented Remove User from Cultivation Team functionality

--- a/src/components/cultivations/CultivationsTable/index.module.scss
+++ b/src/components/cultivations/CultivationsTable/index.module.scss
@@ -10,3 +10,12 @@
   width: 100%;
   height: 100%;
 }
+
+.emptyCultivations {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+  font-size: rem(24px);
+  padding: 30px;
+}
