--- a/src/components/cultivations/CultivationTeamTable/index.module.scss
+++ b/src/components/cultivations/CultivationTeamTable/index.module.scss
@@ -29,3 +29,12 @@
   justify-content: center;
   display: flex !important;
 }
+
+.emptyCultivationTeam {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+  font-size: rem(24px);
+  padding: 30px;
+}
