feat: implemented Add Users Modal with displaying an searching through them without API request and selection

--- a/src/components/cultivations/CultivationTeamTable/index.module.scss
+++ b/src/components/cultivations/CultivationTeamTable/index.module.scss
@@ -39,6 +39,11 @@
   padding: 30px;
 }
 
-.addUsers {
+.addUsersBtn {
   max-width: 300px;
+}
+
+.addUsersModal {
+  height: 90vh;
+  overflow: auto;
 }
