--- a/src/layout/Footer/index.module.scss
+++ b/src/layout/Footer/index.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
   height: 60px;
+  min-height: 60px;
+  max-height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
