--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -32,4 +32,20 @@
 .link {
   text-decoration: none;
   color: white;
+  transition: $default-transition;
+  background-color: #1c7d1c;
+  border-radius: 5px;
+  padding: 8px 16px;
+
+  @media (max-width: $tabletBreakpoint) {
+    font-size: 12px;
+  }
+
+  &:hover {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  }
+
+  &:active {
+    transform: translate(0, 2px);
+  }
 }
